# RAG_BasicDocMind

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: agent-weekly.yml
frontend/: index.html
frontend/css/: custom.css
frontend/js/: app.js
frontend/js/api/: base.js  chat.js
frontend/js/components/: ChatInterface.js  DocumentList.js  DocumentUpload.js
frontend/js/utils/: markdown.js
scripts/: agent_digest.py
src/api/: config.py  deps.py  main.py  models.py
src/api/routers/: chat.py  document.py  health.py
src/database/: document_store.py
src/embeddings/: base.py  chroma_store.py  local_embedding.py  openai_embedding.py  vector_store.py
src/llm/: llm.py  rag.py
src/parsers/: __init__.py  base.py  chunker.py  cleaner.py  html_parser.py  markdown_parser.py  pdf_parse.py  table_parser.py  word_parser.py
src/retrieval/: search_service.py
tests/: test_chromadb_store.py  test_chunker.py  test_cleaner.py  test_document_store.py  test_html.py  test_llm.py  test_local_embedding.py  test_markdown.py  test_openai_embedding.py  test_parser_factory.py  test_pdf.md  test_pdf.py  test_search_service.py  test_table.py  test_word.py  test_zhipu_embedding.py
