[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=7.0.5",
    "chromadb>=1.5.5",
    "docling>=2.76.0",
    "fastapi>=0.135.1",
    "markdownify>=1.2.2",
    "numpy>=2.4.2",
    "openai>=2.29.0",
    "pandas>=2.3.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.3.0",
    "tenacity>=9.1.4",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn>=0.42.0",
]

[tool.uv.sources]
torch = [
    # 使用我们下面定义的索引 "pytorch-cu126"
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
# 定义 PyTorch CUDA 12.6 的专用索引
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
# explicit = true 确保只有我们指定的包从这里获取
explicit = true

[[tool.uv.index]]
# 保留默认的 PyPI 索引，用于安装其他非 PyTorch 的包
name = "pypi"
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
